sort.basic.comb.AlgCombSort11.scala.error
Compilation error:
AlgCombSort11:2: error: Missing closing brace `}' assumed here
def combSort11() {
^AlgCombSort11:2: error: expected class or object definition
def combSort11() {
^